crates/parser/tests/snapshots/statements/valid/0001.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: "SELECT city, count(*) FILTER (WHERE temp_lo < 45), max(temp_lo)\n    FROM weather\n    GROUP BY city;\n"
---
SelectStmt@0..100
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  Ident@7..11 "city"
  Ascii44@11..12 ","
  Whitespace@12..13 " "
  Ident@13..18 "count"
  Ascii40@18..19 "("
  Ascii42@19..20 "*"
  Ascii41@20..21 ")"
  Whitespace@21..22 " "
  Filter@22..28 "FILTER"
  Whitespace@28..29 " "
  Ascii40@29..30 "("
  Where@30..35 "WHERE"
  Whitespace@35..36 " "
  Ident@36..43 "temp_lo"
  Whitespace@43..44 " "
  Ascii60@44..45 "<"
  Whitespace@45..46 " "
  Iconst@46..48 "45"
  Ascii41@48..49 ")"
  Ascii44@49..50 ","
  Whitespace@50..51 " "
  Ident@51..54 "max"
  Ascii40@54..55 "("
  Ident@55..62 "temp_lo"
  Ascii41@62..63 ")"
  Newline@63..64 "\n"
  Whitespace@64..68 "    "
  From@68..72 "FROM"
  Whitespace@72..73 " "
  Ident@73..80 "weather"
  Newline@80..81 "\n"
  Whitespace@81..85 "    "
  GroupP@85..90 "GROUP"
  Whitespace@90..91 " "
  By@91..93 "BY"
  Whitespace@93..94 " "
  Ident@94..98 "city"
  Ascii59@98..99 ";"
  Newline@99..100 "\n"

