crates/parser/tests/snapshots/statements/valid/0003.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: "CREATE TABLE weather (\n        city      varchar(80) references cities(name),\n        temp_lo   int,\n        temp_hi   int,\n        prcp      real,\n        date      date\n);\n"
---
CreateStmt@0..174
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  Ident@13..20 "weather"
  Whitespace@20..21 " "
  Ascii40@21..22 "("
  Newline@22..23 "\n"
  Whitespace@23..31 "        "
  Ident@31..35 "city"
  Whitespace@35..41 "      "
  Varchar@41..48 "varchar"
  Ascii40@48..49 "("
  Iconst@49..51 "80"
  Ascii41@51..52 ")"
  Whitespace@52..53 " "
  References@53..63 "references"
  Whitespace@63..64 " "
  Ident@64..70 "cities"
  Ascii40@70..71 "("
  NameP@71..75 "name"
  Ascii41@75..76 ")"
  Ascii44@76..77 ","
  Newline@77..78 "\n"
  Whitespace@78..86 "        "
  Ident@86..93 "temp_lo"
  Whitespace@93..96 "   "
  IntP@96..99 "int"
  Ascii44@99..100 ","
  Newline@100..101 "\n"
  Whitespace@101..109 "        "
  Ident@109..116 "temp_hi"
  Whitespace@116..119 "   "
  IntP@119..122 "int"
  Ascii44@122..123 ","
  Newline@123..124 "\n"
  Whitespace@124..132 "        "
  Ident@132..136 "prcp"
  Whitespace@136..142 "      "
  Real@142..146 "real"
  Ascii44@146..147 ","
  Newline@147..148 "\n"
  Whitespace@148..156 "        "
  Ident@156..160 "date"
  Whitespace@160..166 "      "
  Ident@166..170 "date"
  Newline@170..171 "\n"
  Ascii41@171..172 ")"
  Ascii59@172..173 ";"
  Newline@173..174 "\n"

