crates/parser/tests/snapshots/statements/valid/0004.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: "CREATE VIEW myview AS\n    SELECT name, temp_lo, temp_hi, prcp, date, location\n        FROM weather, cities\n        WHERE city = name;\n"
---
ViewStmt@0..134
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  View@7..11 "VIEW"
  Whitespace@11..12 " "
  RangeVar@12..18
    Ident@12..18 "myview"
  Whitespace@18..19 " "
  As@19..21 "AS"
  Newline@21..22 "\n"
  Whitespace@22..26 "    "
  SelectStmt@26..132
    Select@26..32 "SELECT"
    Whitespace@32..33 " "
    ResTarget@33..37
      NameP@33..37 "name"
    Ascii44@37..38 ","
    Whitespace@38..39 " "
    ResTarget@39..46
      Ident@39..46 "temp_lo"
    Ascii44@46..47 ","
    Whitespace@47..48 " "
    ResTarget@48..55
      Ident@48..55 "temp_hi"
    Ascii44@55..56 ","
    Whitespace@56..57 " "
    ResTarget@57..61
      Ident@57..61 "prcp"
    Ascii44@61..62 ","
    Whitespace@62..63 " "
    ResTarget@63..67
      Ident@63..67 "date"
    Ascii44@67..68 ","
    Whitespace@68..69 " "
    ResTarget@69..77
      Location@69..77 "location"
    Newline@77..78 "\n"
    Whitespace@78..86 "        "
    From@86..90 "FROM"
    Whitespace@90..91 " "
    RangeVar@91..98
      Ident@91..98 "weather"
    Ascii44@98..99 ","
    Whitespace@99..100 " "
    RangeVar@100..106
      Ident@100..106 "cities"
    Newline@106..107 "\n"
    Whitespace@107..115 "        "
    Where@115..120 "WHERE"
    Whitespace@120..121 " "
    AExpr@121..132
      Ident@121..125 "city"
      Whitespace@125..126 " "
      Ascii61@126..127 "="
      Whitespace@127..128 " "
      NameP@128..132 "name"
  Ascii59@132..133 ";"
  Newline@133..134 "\n"

