crates/parser/tests/snapshots/statements/valid/0006.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: "DROP TABLE tablename;\n"
---
DropStmt@0..21
  Drop@0..4 "DROP"
  Whitespace@4..5 " "
  Table@5..10 "TABLE"
  Whitespace@10..11 " "
  List@11..20
    String@11..20
      Ident@11..20 "tablename"
  Ascii59@20..21 ";"

