crates/parser/tests/snapshots/statements/valid/0007@1.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: "CREATE TABLE cities (\n  name       text,\n  population real,\n  elevation  int     -- (in ft)\n);"
---
Parse {
    cst: SourceFile@0..94
      CreateStmt@0..94
        Create@0..6 "CREATE"
        Whitespace@6..7 " "
        Table@7..12 "TABLE"
        Whitespace@12..13 " "
        RangeVar@13..19
          Ident@13..19 "cities"
        Whitespace@19..20 " "
        Ascii40@20..21 "("
        Newline@21..22 "\n"
        Whitespace@22..24 "  "
        ColumnDef@24..39
          NameP@24..28 "name"
          Whitespace@28..35 "       "
          TypeName@35..39
            TextP@35..39 "text"
        Ascii44@39..40 ","
        Newline@40..41 "\n"
        Whitespace@41..43 "  "
        ColumnDef@43..58
          Ident@43..53 "population"
          Whitespace@53..54 " "
          TypeName@54..58
            Real@54..58 "real"
        Ascii44@58..59 ","
        Newline@59..60 "\n"
        Whitespace@60..62 "  "
        ColumnDef@62..76
          Ident@62..71 "elevation"
          Whitespace@71..73 "  "
          TypeName@73..76
            IntP@73..76 "int"
        Whitespace@76..81 "     "
        SqlComment@81..91 "-- (in ft)"
        Newline@91..92 "\n"
        Ascii41@92..93 ")"
        Ascii59@93..94 ";"
    ,
    errors: [],
    stmts: [
        RawStmt {
            stmt: CreateStmt(
                CreateStmt {
                    relation: Some(
                        RangeVar {
                            catalogname: "",
                            schemaname: "",
                            relname: "cities",
                            inh: true,
                            relpersistence: "p",
                            alias: None,
                            location: 13,
                        },
                    ),
                    table_elts: [
                        Node {
                            node: Some(
                                ColumnDef(
                                    ColumnDef {
                                        colname: "name",
                                        type_name: Some(
                                            TypeName {
                                                names: [
                                                    Node {
                                                        node: Some(
                                                            String(
                                                                String {
                                                                    sval: "text",
                                                                },
                                                            ),
                                                        ),
                                                    },
                                                ],
                                                type_oid: 0,
                                                setof: false,
                                                pct_type: false,
                                                typmods: [],
                                                typemod: -1,
                                                array_bounds: [],
                                                location: 35,
                                            },
                                        ),
                                        compression: "",
                                        inhcount: 0,
                                        is_local: true,
                                        is_not_null: false,
                                        is_from_type: false,
                                        storage: "",
                                        raw_default: None,
                                        cooked_default: None,
                                        identity: "",
                                        identity_sequence: None,
                                        generated: "",
                                        coll_clause: None,
                                        coll_oid: 0,
                                        constraints: [],
                                        fdwoptions: [],
                                        location: 24,
                                    },
                                ),
                            ),
                        },
                        Node {
                            node: Some(
                                ColumnDef(
                                    ColumnDef {
                                        colname: "population",
                                        type_name: Some(
                                            TypeName {
                                                names: [
                                                    Node {
                                                        node: Some(
                                                            String(
                                                                String {
                                                                    sval: "pg_catalog",
                                                                },
                                                            ),
                                                        ),
                                                    },
                                                    Node {
                                                        node: Some(
                                                            String(
                                                                String {
                                                                    sval: "float4",
                                                                },
                                                            ),
                                                        ),
                                                    },
                                                ],
                                                type_oid: 0,
                                                setof: false,
                                                pct_type: false,
                                                typmods: [],
                                                typemod: -1,
                                                array_bounds: [],
                                                location: 54,
                                            },
                                        ),
                                        compression: "",
                                        inhcount: 0,
                                        is_local: true,
                                        is_not_null: false,
                                        is_from_type: false,
                                        storage: "",
                                        raw_default: None,
                                        cooked_default: None,
                                        identity: "",
                                        identity_sequence: None,
                                        generated: "",
                                        coll_clause: None,
                                        coll_oid: 0,
                                        constraints: [],
                                        fdwoptions: [],
                                        location: 43,
                                    },
                                ),
                            ),
                        },
                        Node {
                            node: Some(
                                ColumnDef(
                                    ColumnDef {
                                        colname: "elevation",
                                        type_name: Some(
                                            TypeName {
                                                names: [
                                                    Node {
                                                        node: Some(
                                                            String(
                                                                String {
                                                                    sval: "pg_catalog",
                                                                },
                                                            ),
                                                        ),
                                                    },
                                                    Node {
                                                        node: Some(
                                                            String(
                                                                String {
                                                                    sval: "int4",
                                                                },
                                                            ),
                                                        ),
                                                    },
                                                ],
                                                type_oid: 0,
                                                setof: false,
                                                pct_type: false,
                                                typmods: [],
                                                typemod: -1,
                                                array_bounds: [],
                                                location: 73,
                                            },
                                        ),
                                        compression: "",
                                        inhcount: 0,
                                        is_local: true,
                                        is_not_null: false,
                                        is_from_type: false,
                                        storage: "",
                                        raw_default: None,
                                        cooked_default: None,
                                        identity: "",
                                        identity_sequence: None,
                                        generated: "",
                                        coll_clause: None,
                                        coll_oid: 0,
                                        constraints: [],
                                        fdwoptions: [],
                                        location: 62,
                                    },
                                ),
                            ),
                        },
                    ],
                    inh_relations: [],
                    partbound: None,
                    partspec: None,
                    of_typename: None,
                    constraints: [],
                    options: [],
                    oncommit: OncommitNoop,
                    tablespacename: "",
                    access_method: "",
                    if_not_exists: false,
                },
            ),
            range: 0..93,
        },
    ],
}
