crates/parser/tests/snapshots/statements/valid/0009.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: "SELECT w1.city, w1.temp_lo AS low, w1.temp_hi AS high,\n       w2.city, w2.temp_lo AS low, w2.temp_hi AS high\n    FROM weather w1 JOIN weather w2\n        ON w1.temp_lo < w2.temp_lo AND w1.temp_hi > w2.temp_hi;\n"
---
SelectStmt@0..209
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  Ident@7..9 "w1"
  Ascii46@9..10 "."
  Ident@10..14 "city"
  Ascii44@14..15 ","
  Whitespace@15..16 " "
  Ident@16..18 "w1"
  Ascii46@18..19 "."
  Ident@19..26 "temp_lo"
  Whitespace@26..27 " "
  As@27..29 "AS"
  Whitespace@29..30 " "
  Ident@30..33 "low"
  Ascii44@33..34 ","
  Whitespace@34..35 " "
  Ident@35..37 "w1"
  Ascii46@37..38 "."
  Ident@38..45 "temp_hi"
  Whitespace@45..46 " "
  As@46..48 "AS"
  Whitespace@48..49 " "
  Ident@49..53 "high"
  Ascii44@53..54 ","
  Newline@54..55 "\n"
  Whitespace@55..62 "       "
  Ident@62..64 "w2"
  Ascii46@64..65 "."
  Ident@65..69 "city"
  Ascii44@69..70 ","
  Whitespace@70..71 " "
  Ident@71..73 "w2"
  Ascii46@73..74 "."
  Ident@74..81 "temp_lo"
  Whitespace@81..82 " "
  As@82..84 "AS"
  Whitespace@84..85 " "
  Ident@85..88 "low"
  Ascii44@88..89 ","
  Whitespace@89..90 " "
  Ident@90..92 "w2"
  Ascii46@92..93 "."
  Ident@93..100 "temp_hi"
  Whitespace@100..101 " "
  As@101..103 "AS"
  Whitespace@103..104 " "
  Ident@104..108 "high"
  Newline@108..109 "\n"
  Whitespace@109..113 "    "
  From@113..117 "FROM"
  Whitespace@117..118 " "
  Ident@118..125 "weather"
  Whitespace@125..126 " "
  Ident@126..128 "w1"
  Whitespace@128..129 " "
  Join@129..133 "JOIN"
  Whitespace@133..134 " "
  Ident@134..141 "weather"
  Whitespace@141..142 " "
  Ident@142..144 "w2"
  Newline@144..145 "\n"
  Whitespace@145..153 "        "
  On@153..155 "ON"
  Whitespace@155..156 " "
  Ident@156..158 "w1"
  Ascii46@158..159 "."
  Ident@159..166 "temp_lo"
  Whitespace@166..167 " "
  Ascii60@167..168 "<"
  Whitespace@168..169 " "
  Ident@169..171 "w2"
  Ascii46@171..172 "."
  Ident@172..179 "temp_lo"
  Whitespace@179..180 " "
  And@180..183 "AND"
  Whitespace@183..184 " "
  Ident@184..186 "w1"
  Ascii46@186..187 "."
  Ident@187..194 "temp_hi"
  Whitespace@194..195 " "
  Ascii62@195..196 ">"
  Whitespace@196..197 " "
  Ident@197..199 "w2"
  Ascii46@199..200 "."
  Ident@200..207 "temp_hi"
  Ascii59@207..208 ";"
  Newline@208..209 "\n"

